...
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".teamdetail.TeamDetailActivity"
    android:id="@+id/layoutteamdetail">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_teamdetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
...
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="bottom"
            app:tabTextColor="@color/darkergray"
            app:tabSelectedTextColor="@color/white"
            app:tabIndicatorColor="@color/colorAccent"
...
