<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/m_search"
            android:enabled="true"
            android:title="Search"
            android:icon="@drawable/ic_search_white_24dp"
            app:showAsAction="always"/>
</menu>